--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
   <meta charset="utf-8">
-  <title>Demo</title>
+  <title>企业协作平台</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
